Fix bottom white space on mobile

--- a/client/src/components/Content.module.css
+++ b/client/src/components/Content.module.css
@@ -51,7 +51,7 @@
     flex: 2;
     padding-bottom: 140px;
     max-height: calc(100vh - 70px - 65px);
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .velkomst {
@@ -74,5 +74,9 @@
 
     .content h1 {
         text-align: center;
+    }
+
+    .content {
+        max-height: 100vh;
     }
 }
